// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TzIcon Component should render ArrowRightIcon, light 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="w-[16px] h-[16px] lg:w-[20px] lg:h-[20px] text-light dark:text-dark-light "
    data-slot="icon"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      ArrowRightIcon
    </title>
    <path
      d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;

exports[`TzIcon Component should render HeartIcon, negative 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="w-[16px] h-[16px] lg:w-[20px] lg:h-[20px] text-negative dark:text-dark-negative "
    data-slot="icon"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      HeartIcon
    </title>
    <path
      d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;

exports[`TzIcon Component should render MoonIcon, primary 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="w-[16px] h-[16px] lg:w-[20px] lg:h-[20px] text-primary dark:text-dark-primary "
    data-slot="icon"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      MoonIcon
    </title>
    <path
      d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;

exports[`TzIcon Component should render SunIcon, secondary 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="w-[16px] h-[16px] lg:w-[20px] lg:h-[20px] text-secondary dark:text-dark-secondary "
    data-slot="icon"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      SunIcon
    </title>
    <path
      d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;
